Bug 1832178 - Pocket newtab international onboarding experience alignment issue r=gvn a=pascalc
Differential Revision: https://phabricator.services.mozilla.com/D177641

--- a/browser/components/newtab/css/activity-stream-mac.css
+++ b/browser/components/newtab/css/activity-stream-mac.css
@@ -2629,60 +2629,56 @@ main.has-snippet {
   text-decoration: underline;
 }
 
-.ds-onboarding,
+.ds-onboarding-container,
 .ds-card-grid .ds-card {
   background: #FFF;
   border-radius: 4px;
 }
-[lwt-newtab-brighttext] .ds-onboarding,
+[lwt-newtab-brighttext] .ds-onboarding-container,
 [lwt-newtab-brighttext] .ds-card-grid .ds-card {
   background: none;
 }
-.ds-onboarding:not(.placeholder),
+.ds-onboarding-container:not(.placeholder),
 .ds-card-grid .ds-card:not(.placeholder) {
   border-radius: 8px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
 }
-[lwt-newtab-brighttext] .ds-onboarding:not(.placeholder),
+[lwt-newtab-brighttext] .ds-onboarding-container:not(.placeholder),
 [lwt-newtab-brighttext] .ds-card-grid .ds-card:not(.placeholder) {
   background: var(--newtab-background-color-secondary);
 }
-.ds-onboarding:not(.placeholder) .img-wrapper .img img,
-.ds-onboarding:not(.placeholder) .img-wrapper .img .placeholder-image,
+.ds-onboarding-container:not(.placeholder) .img-wrapper .img img,
+.ds-onboarding-container:not(.placeholder) .img-wrapper .img .placeholder-image,
 .ds-card-grid .ds-card:not(.placeholder) .img-wrapper .img img,
 .ds-card-grid .ds-card:not(.placeholder) .img-wrapper .img .placeholder-image {
   border-radius: 8px 8px 0 0;
 }
 
-.ds-onboarding-ref {
-  display: inline-block;
-}
-
-.ds-onboarding {
+.ds-onboarding-container {
   padding-inline-start: 16px;
   padding-inline-end: 16px;
   margin-bottom: 24px;
-  display: inline-block;
   position: relative;
 }
 @media (min-width: 610px) {
-  .ds-onboarding {
+  .ds-onboarding-container {
     padding-inline-end: 48px;
   }
 }
 @media (min-width: 866px) {
-  .ds-onboarding {
+  .ds-onboarding-container {
     padding-inline-end: 56px;
   }
 }
-.ds-onboarding .ds-dismiss {
+.ds-onboarding-container .ds-onboarding {
   position: static;
+  display: flex;
 }
-.ds-onboarding .ds-dismiss .ds-dismiss-button {
+.ds-onboarding-container .ds-onboarding .ds-dismiss-button {
   inset-inline-end: 8px;
   top: 8px;
 }
-.ds-onboarding header {
+.ds-onboarding-container header {
   display: flex;
   margin: 32px 0 8px;
   font-size: 17px;
@@ -2690,22 +2686,22 @@ main.has-snippet {
   font-weight: 600;
   color: #EF4056;
 }
-[lwt-newtab-brighttext] .ds-onboarding header {
+[lwt-newtab-brighttext] .ds-onboarding-container header {
   color: var(--newtab-background-color-primary);
 }
 @media (min-width: 610px) {
-  .ds-onboarding header {
+  .ds-onboarding-container header {
     margin: 16px 0 8px;
     display: block;
     height: 24px;
   }
 }
-.ds-onboarding p {
+.ds-onboarding-container p {
   margin: 8px 0 16px;
   font-size: 13px;
   line-height: 19.5px;
 }
-.ds-onboarding .icon-pocket {
+.ds-onboarding-container .icon-pocket {
   fill: #EF4056;
   margin-top: 3px;
   margin-inline-end: 8px;
@@ -2714,11 +2710,11 @@ main.has-snippet {
   background-image: url("chrome://global/skin/icons/pocket.svg");
   background-size: contain;
 }
-[lwt-newtab-brighttext] .ds-onboarding .icon-pocket {
+[lwt-newtab-brighttext] .ds-onboarding-container .icon-pocket {
   fill: var(--newtab-text-primary-color);
 }
 @media (min-width: 610px) {
-  .ds-onboarding .icon-pocket {
+  .ds-onboarding-container .icon-pocket {
     margin-top: -5px;
     margin-inline-start: -2px;
     margin-inline-end: 15px;
@@ -2726,7 +2722,7 @@ main.has-snippet {
     width: 30px;
   }
 }
-.ds-onboarding .ds-onboarding-graphic {
+.ds-onboarding-container .ds-onboarding-graphic {
   background-image: url("chrome://activity-stream/content/data/content/assets/pocket-onboarding.avif");
   border-radius: 8px;
   background-size: contain;
@@ -2734,18 +2730,19 @@ main.has-snippet {
   background-position: center;
   height: 120px;
   width: 200px;
-  margin-inline-start: 54px;
+  margin-top: 16px;
   margin-bottom: 16px;
-  float: inline-end;
+  margin-inline-start: 54px;
+  flex-shrink: 0;
   display: none;
 }
 @media (min-resolution: 2x) {
-  .ds-onboarding .ds-onboarding-graphic {
+  .ds-onboarding-container .ds-onboarding-graphic {
     background-image: url("chrome://activity-stream/content/data/content/assets/pocket-onboarding@2x.avif");
   }
 }
 @media (min-width: 866px) {
-  .ds-onboarding .ds-onboarding-graphic {
+  .ds-onboarding-container .ds-onboarding-graphic {
     display: block;
   }
 }
